# VoiceSlice

./: .gitignore  QUICKSTART.md  README.md  config.yaml  pyproject.toml  run.sh
src/: __init__.py
src/asr/: __init__.py  config.py  fasterwhisper_asr.py  funasr_asr.py
src/slicer/: __init__.py  slice_audio.py  slicer.py
src/utils/: __init__.py  audio_utils.py
webui/: app.py
